<resources>

    <string name="app_name">Clínica DPAESAN</string>

    <!-- Menú -->
    <string name="title_home">Inicio</string>
    <string name="title_register">Registro</string>
    <string name="title_assignment">Asignación</string>
    <string name="title_reports">Reporte</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Home -->
    <string name="title_hello">Hola, {nombre}</string>
    <string name="subtitle_home">¿Qué quieres hacer hoy?</string>
    <string name="btn_register">Registrar</string>
    <string name="btn_assign">Asignar</string>
    <string name="btn_report">Ver reporte</string>

    <!-- Home de Registro -->
    <string name="subtitle_register">Registrar un:</string>
    <string name="btn_employee">Empleado</string>
    <string name="btn_group">Grupo de empleados</string>
    <string name="btn_metric">Indicador</string>
    <string name="btn_metricType">Tipo de indicador</string>

    <!-- Home de Asignación -->
    <string name="subtitle_assign">Asignar indicadores:</string>
    <string name="btn_byGroup">Por grupo</string>
    <string name="btn_byEmployee">Por persona y día</string>

    <!-- Registro de empleado -->
    <string name="title_registerEmployee">Registra un empleado</string>
    <string name="subtitle1_registerEmployee">Datos personales</string>
    <string name="subtitle2_registerEmployee">Grupo</string>
    <string name="hint_docNumber">Nro. de documento</string>
    <string name="hint_names">Nombre(s)</string>
    <string name="hint_firstSurname">Apellido paterno</string>
    <string name="hint_secondSurname">Apellido materno</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="label_medic">Médico</string>
    <string name="label_nurseLic">Licenciado/a de enfermería</string>
    <string name="label_nurseTec">Técnico/a de enfermería</string>
    <string name="title_registerGroup">Registra un grupo</string>
    <string name="hint_description">Descripción</string>
    <string name="title_registerMetric">Registra un indicador</string>
    <string name="hint_formula">Fórmula (referencial)</string>
    <string name="asignar">Asignar</string>
    <string name="evaluar">Evaluar</string>
    <string name="title_registerMetricType">Registra un tipo de indicador</string>
    <string name="subtitle1_registerMetricType">Tipo</string>
    <string name="subtitle2_registerMetricType">Valores</string>
    <string name="hint_value1">Valor 1</string>
    <string name="hint_value2">Valor 2</string>
    <string name="hint_value3">Valor 3</string>
    <string name="hint_value4">Valor 4</string>
    <string name="hint_value5" />
    <string name="label_quantitative">Cuantitativo</string>
    <string name="label_qualitative">Cualitativo</string>
    <string name="btn_addValue">Agregar valor</string>

    <string-array name="tipos_documento">
        <item>Tipo</item>
        <item>DNI</item>
        <item>CE</item>
        <item>Pasaporte</item>
    </string-array>
</resources>